objects/Vendor_Compensation__c.object
<CustomObject>
    <description>This object is intended to hold data from our financials system for compensation purposes and integrate with xactly external tool</description>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Customer_Id__c</fullName>
        <label>Vendor Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Number__c</fullName>
        <label>Vendor Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vendor Compensation</label>
    <nameField>
        <displayFormat>VC{000000000}</displayFormat>
        <label>Vendor Comensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Compensation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>